--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/marcoantoniosouza/paula-pass#readme",
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "express-basic-auth": "^1.2.0",
     "mongoose": "^5.9.20"
   }
 }
