--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Aplicativo Para Senhas",
   "main": "scr/index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
