--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "paula-pass",
+  "name": "easypw",
   "version": "0.1.0",
   "description": "Aplicativo Para Senhas",
   "main": "scr/index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/marcoantoniosouza/paula-pass.git"
+    "url": "git+https://github.com/marcoantoniosouza/EasyPW-API.git"
   },
   "author": "Marco Antonio Souza",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/marcoantoniosouza/paula-pass/issues"
+    "url": "https://github.com/marcoantoniosouza/EasyPW-API/issues"
   },
-  "homepage": "https://github.com/marcoantoniosouza/paula-pass#readme",
+  "homepage": "https://github.com/marcoantoniosouza/EasyPW-API#readme",
   "dependencies": {
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
